syntax = "proto3";

package proto;

option go_package = "./userpb";

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
    rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse);
}

message User {
    uint32 id = 1;
    string fname = 2;
    string city = 3;
    uint64 phone = 4;
    float height = 5;
    bool married = 6;
}

message GetUserRequest {
    uint32 id = 1;
}

message GetUserResponse {
    uint32 statusCode = 1;
    User user = 2;
}

message ListUsersRequest {
    repeated uint32 ids = 1;
}

message ListUsersResponse {
    uint32 statusCode = 1;
    repeated User users = 2;
}

message SearchUsersRequest {
    string city = 1;
    uint64 phone = 2;
    bool married = 3;
}

message SearchUsersResponse {
    uint32 statusCode = 1;
    repeated User users = 2;
}
